parser.out
Grammar:

Rule 0     S' -> program
Rule 1     program -> decl_list
Rule 2     decl_list -> decl
Rule 3     decl_list -> decl_list decl
<<<<<<< HEAD
Rule 4     decl -> class_decl
Rule 5     decl -> func_decl
Rule 6     decl -> var_decl
Rule 7     class_decl -> CLASS IDENT { compound_stmt }
Rule 8     func_decl -> type_spec IDENT ( param_list ) compound_stmt
Rule 9     param_list -> param_list , param
Rule 10    param_list -> empty
Rule 11    param -> type_spec IDENT [ INTLIT ]
Rule 12    param -> type_spec IDENT
Rule 13    compound_stmt -> { local_decls stmt_list }
Rule 14    local_decls -> empty
Rule 15    local_decls -> var_decl local_decls
Rule 16    stmt_list -> stmt stmt_list
Rule 17    stmt_list -> empty
Rule 18    stmt -> for_stmt
Rule 19    stmt -> super_stmt
Rule 20    stmt -> public_stmt
Rule 21    stmt -> private_stmt
Rule 22    stmt -> this_stmt
Rule 23    stmt -> new_stmt
Rule 24    stmt -> print_stmt
Rule 25    stmt -> continue_stmt
Rule 26    stmt -> break_stmt
Rule 27    stmt -> while_stmt
Rule 28    stmt -> return_stmt
Rule 29    stmt -> if_stmt
Rule 30    stmt -> compound_stmt
Rule 31    stmt -> expr_stmt
Rule 32    for_stmt -> FOR ( expr ; expr ; expr ) stmt
Rule 33    super_stmt -> SUPER ( args_list ) ;
Rule 34    expr_stmt -> expr ;
Rule 35    if_stmt -> IF ( expr ) stmt ELSE stmt  [precedence=nonassoc, level=2]
Rule 36    if_stmt -> IF ( expr ) stmt  [precedence=nonassoc, level=1]
Rule 37    private_stmt -> PRIVATE : stmt
Rule 38    public_stmt -> PUBLIC : stmt
Rule 39    return_stmt -> RETURN expr ;
Rule 40    return_stmt -> RETURN ;
Rule 41    while_stmt -> WHILE ( expr ) stmt
Rule 42    break_stmt -> BREAK ;
Rule 43    continue_stmt -> CONTINUE ;
Rule 44    new_stmt -> IDENT = NEW IDENT ( args_list ) ;
Rule 45    args_list -> args_list , expr
Rule 46    args_list -> empty
Rule 47    print_stmt -> PRINTF ( expr ) ;
Rule 48    this_stmt -> THIS ;
Rule 49    var_decl -> type_spec IDENT [ INTLIT ] ;
Rule 50    var_decl -> type_spec IDENT = expr ;
Rule 51    var_decl -> type_spec IDENT ;
Rule 52    type_spec -> STRING
Rule 53    type_spec -> BOOL
Rule 54    type_spec -> FLOAT
Rule 55    type_spec -> INT
Rule 56    type_spec -> VOID
Rule 57    expr -> IDENT . SIZE
Rule 58    expr -> ( expr )
Rule 59    expr -> NOT expr  [precedence=right, level=12]
Rule 60    expr -> DECREMENT expr  [precedence=right, level=12]
Rule 61    expr -> INCREMENT expr  [precedence=right, level=12]
Rule 62    expr -> + expr  [precedence=right, level=12]
Rule 63    expr -> ! expr  [precedence=right, level=12]
Rule 64    expr -> - expr  [precedence=right, level=12]
Rule 65    expr -> expr % expr  [precedence=left, level=10]
Rule 66    expr -> expr / expr  [precedence=left, level=10]
Rule 67    expr -> expr * expr  [precedence=left, level=10]
Rule 68    expr -> expr - expr  [precedence=left, level=9]
Rule 69    expr -> expr + expr  [precedence=left, level=9]
Rule 70    expr -> expr GE expr  [precedence=nonassoc, level=8]
Rule 71    expr -> expr GT expr  [precedence=nonassoc, level=8]
Rule 72    expr -> expr LE expr  [precedence=nonassoc, level=8]
Rule 73    expr -> expr LT expr  [precedence=nonassoc, level=8]
Rule 74    expr -> expr NE expr  [precedence=nonassoc, level=7]
Rule 75    expr -> expr EQ expr  [precedence=nonassoc, level=7]
Rule 76    expr -> expr AND expr  [precedence=left, level=6]
Rule 77    expr -> expr OR expr  [precedence=left, level=5]
Rule 78    expr -> IDENT
Rule 79    expr -> IDENT ( args_list )
Rule 80    expr -> IDENT [ expr ]
Rule 81    expr -> IDENT [ expr ] = expr  [precedence=left, level=4]
Rule 82    expr -> IDENT = expr  [precedence=left, level=4]
Rule 83    expr -> FALSE
Rule 84    expr -> TRUE
Rule 85    expr -> STRINGLIT
Rule 86    expr -> BOOLIT
Rule 87    expr -> FLOATLIT
Rule 88    expr -> INTLIT
Rule 89    empty -> <empty>

Terminals, with rules where they appear:

!                    : 63
%                    : 65
(                    : 8 32 33 35 36 41 44 47 58 79
)                    : 8 32 33 35 36 41 44 47 58 79
*                    : 67
+                    : 62 69
,                    : 9 45
-                    : 64 68
.                    : 57
/                    : 66
:                    : 37 38
;                    : 32 32 33 34 39 40 42 43 44 47 48 49 50 51
=                    : 44 50 81 82
AND                  : 76
BOOL                 : 53
BOOLIT               : 86
BREAK                : 42
CLASS                : 7
CONTINUE             : 43
DECREMENT            : 60
ELSE                 : 35
EQ                   : 75
FALSE                : 83
FLOAT                : 54
FLOATLIT             : 87
FOR                  : 32
GE                   : 70
GT                   : 71
IDENT                : 7 8 11 12 44 44 49 50 51 57 78 79 80 81 82
IF                   : 35 36
INCREMENT            : 61
INT                  : 55
INTLIT               : 11 49 88
LE                   : 72
LT                   : 73
NE                   : 74
NEW                  : 44
NOT                  : 59
OR                   : 77
PRINTF               : 47
PRIVATE              : 37
PUBLIC               : 38
RETURN               : 39 40
SIZE                 : 57
STRING               : 52
STRINGLIT            : 85
SUPER                : 33
THIS                 : 48
TRUE                 : 84
VOID                 : 56
WHILE                : 41
[                    : 11 49 80 81
]                    : 11 49 80 81
=======
Rule 4     decl -> var_decl_instance
Rule 5     decl -> class_decl
Rule 6     decl -> func_decl
Rule 7     decl -> var_decl
Rule 8     class_decl -> CLASS IDENT { class_body } ;
Rule 9     class_body -> <empty>
Rule 10    class_body -> class_member class_body
Rule 11    class_body -> access_specifier class_body
Rule 12    access_specifier -> PUBLIC :
Rule 13    access_specifier -> PRIVATE :
Rule 14    class_member -> constructor_decl
Rule 15    class_member -> method_decl
Rule 16    class_member -> var_decl
Rule 17    method_decl -> type_spec IDENT ( param_list ) compound_stmt
Rule 18    constructor_decl -> IDENT ( param_list ) compound_stmt
Rule 19    func_decl -> type_spec IDENT ( param_list ) compound_stmt
Rule 20    param_list -> param
Rule 21    param_list -> param_list , param
Rule 22    param_list -> empty
Rule 23    param -> type_spec IDENT [ INTLIT ]
Rule 24    param -> type_spec IDENT
Rule 25    compound_stmt -> { local_decls stmt_list }
Rule 26    local_decls -> empty
Rule 27    local_decls -> var_decl local_decls
Rule 28    stmt_list -> stmt stmt_list
Rule 29    stmt_list -> empty
Rule 30    stmt -> var_decl_instance
Rule 31    stmt -> super_stmt
Rule 32    stmt -> public_stmt
Rule 33    stmt -> private_stmt
Rule 34    stmt -> this_stmt
Rule 35    stmt -> new_stmt
Rule 36    stmt -> print_stmt
Rule 37    stmt -> continue_stmt
Rule 38    stmt -> break_stmt
Rule 39    stmt -> while_stmt
Rule 40    stmt -> return_stmt
Rule 41    stmt -> if_stmt
Rule 42    stmt -> compound_stmt
Rule 43    stmt -> expr_stmt
Rule 44    super_stmt -> SUPER ( args_list ) ;
Rule 45    expr_stmt -> expr ;
Rule 46    if_stmt -> IF ( expr ) stmt ELSE stmt  [precedence=left, level=12]
Rule 47    if_stmt -> IF ( expr ) stmt  [precedence=right, level=11]
Rule 48    private_stmt -> PRIVATE : stmt
Rule 49    public_stmt -> PUBLIC : stmt
Rule 50    return_stmt -> RETURN expr ;
Rule 51    return_stmt -> RETURN ;
Rule 52    while_stmt -> WHILE ( expr ) stmt
Rule 53    break_stmt -> BREAK ;
Rule 54    continue_stmt -> CONTINUE ;
Rule 55    new_stmt -> IDENT = NEW IDENT ( args_list ) ;
Rule 56    args_list -> args_list , expr
Rule 57    args_list -> expr
Rule 58    args_list -> empty
Rule 59    print_stmt -> PRINTF ( expr ) ;
Rule 60    this_stmt -> THIS ;
Rule 61    var_decl -> type_spec IDENT [ INTLIT ] ;
Rule 62    var_decl -> type_spec IDENT = expr ;
Rule 63    var_decl -> type_spec IDENT ;
Rule 64    var_decl_instance -> IDENT IDENT ;
Rule 65    type_spec -> STRING
Rule 66    type_spec -> BOOL
Rule 67    type_spec -> FLOAT
Rule 68    type_spec -> INT
Rule 69    type_spec -> VOID
Rule 70    expr -> IDENT . SIZE
Rule 71    expr -> ( expr )
Rule 72    expr -> NOT expr  [precedence=right, level=10]
Rule 73    expr -> DECREMENT expr  [precedence=right, level=10]
Rule 74    expr -> INCREMENT expr  [precedence=right, level=10]
Rule 75    expr -> + expr  [precedence=right, level=10]
Rule 76    expr -> ! expr  [precedence=right, level=10]
Rule 77    expr -> - expr  [precedence=right, level=10]
Rule 78    expr -> expr % expr  [precedence=left, level=8]
Rule 79    expr -> expr / expr  [precedence=left, level=8]
Rule 80    expr -> expr * expr  [precedence=left, level=8]
Rule 81    expr -> expr - expr  [precedence=left, level=7]
Rule 82    expr -> expr + expr  [precedence=left, level=7]
Rule 83    expr -> expr GE expr  [precedence=nonassoc, level=6]
Rule 84    expr -> expr GT expr  [precedence=nonassoc, level=6]
Rule 85    expr -> expr LE expr  [precedence=nonassoc, level=6]
Rule 86    expr -> expr LT expr  [precedence=nonassoc, level=6]
Rule 87    expr -> expr NE expr  [precedence=nonassoc, level=5]
Rule 88    expr -> expr EQ expr  [precedence=nonassoc, level=5]
Rule 89    expr -> expr AND expr  [precedence=left, level=4]
Rule 90    expr -> expr OR expr  [precedence=left, level=3]
Rule 91    expr -> IDENT . IDENT ( args_list )
Rule 92    expr -> IDENT
Rule 93    expr -> IDENT ( args_list )
Rule 94    expr -> IDENT [ expr ]
Rule 95    expr -> IDENT [ expr ] = expr  [precedence=left, level=2]
Rule 96    expr -> IDENT = expr  [precedence=left, level=2]
Rule 97    expr -> FALSE
Rule 98    expr -> TRUE
Rule 99    expr -> STRINGLIT
Rule 100   expr -> BOOLIT
Rule 101   expr -> FLOATLIT
Rule 102   expr -> INTLIT
Rule 103   empty -> <empty>

Terminals, with rules where they appear:

!                    : 76
%                    : 78
(                    : 17 18 19 44 46 47 52 55 59 71 91 93
)                    : 17 18 19 44 46 47 52 55 59 71 91 93
*                    : 80
+                    : 75 82
,                    : 21 56
-                    : 77 81
.                    : 70 91
/                    : 79
:                    : 12 13 48 49
;                    : 8 44 45 50 51 53 54 55 59 60 61 62 63 64
=                    : 55 62 95 96
AND                  : 89
BOOL                 : 66
BOOLIT               : 100
BREAK                : 53
CLASS                : 8
CONTINUE             : 54
DECREMENT            : 73
ELSE                 : 46
EQ                   : 88
FALSE                : 97
FLOAT                : 67
FLOATLIT             : 101
GE                   : 83
GT                   : 84
IDENT                : 8 17 18 19 23 24 55 55 61 62 63 64 64 70 91 91 92 93 94 95 96
IF                   : 46 47
INCREMENT            : 74
INT                  : 68
INTLIT               : 23 61 102
LE                   : 85
LT                   : 86
NE                   : 87
NEW                  : 55
NOT                  : 72
OR                   : 90
PRINTF               : 59
PRIVATE              : 13 48
PUBLIC               : 12 49
RETURN               : 50 51
SIZE                 : 70
STRING               : 65
STRINGLIT            : 99
SUPER                : 44
THIS                 : 60
TRUE                 : 98
VOID                 : 69
WHILE                : 52
[                    : 23 61 94 95
]                    : 23 61 94 95
>>>>>>> 0b004bccc6761290b3abd9ec21452a14d52de767
error                : 
{                    : 8 25
}                    : 8 25

Nonterminals, with rules where they appear:

<<<<<<< HEAD
args_list            : 33 44 45 79
break_stmt           : 26
class_decl           : 4
compound_stmt        : 7 8 30
continue_stmt        : 25
decl                 : 2 3
decl_list            : 1 3
empty                : 10 14 17 46
expr                 : 32 32 32 34 35 36 39 41 45 47 50 58 59 60 61 62 63 64 65 65 66 66 67 67 68 68 69 69 70 70 71 71 72 72 73 73 74 74 75 75 76 76 77 77 80 81 81 82
expr_stmt            : 31
for_stmt             : 18
func_decl            : 5
if_stmt              : 29
local_decls          : 13 15
new_stmt             : 23
param                : 9
param_list           : 8 9
print_stmt           : 24
private_stmt         : 21
program              : 0
public_stmt          : 20
return_stmt          : 28
stmt                 : 16 32 35 35 36 37 38 41
stmt_list            : 13 16
super_stmt           : 19
this_stmt            : 22
type_spec            : 8 11 12 49 50 51
var_decl             : 6 15
while_stmt           : 27
=======
access_specifier     : 11
args_list            : 44 55 56 91 93
break_stmt           : 38
class_body           : 8 10 11
class_decl           : 5
class_member         : 10
compound_stmt        : 17 18 19 42
constructor_decl     : 14
continue_stmt        : 37
decl                 : 2 3
decl_list            : 1 3
empty                : 22 26 29 58
expr                 : 45 46 47 50 52 56 57 59 62 71 72 73 74 75 76 77 78 78 79 79 80 80 81 81 82 82 83 83 84 84 85 85 86 86 87 87 88 88 89 89 90 90 94 95 95 96
expr_stmt            : 43
func_decl            : 6
if_stmt              : 41
local_decls          : 25 27
method_decl          : 15
new_stmt             : 35
param                : 20 21
param_list           : 17 18 19 21
print_stmt           : 36
private_stmt         : 33
program              : 0
public_stmt          : 32
return_stmt          : 40
stmt                 : 28 46 46 47 48 49 52
stmt_list            : 25 28
super_stmt           : 31
this_stmt            : 34
type_spec            : 17 19 23 24 61 62 63
var_decl             : 7 16 27
var_decl_instance    : 4 30
while_stmt           : 39
>>>>>>> 0b004bccc6761290b3abd9ec21452a14d52de767


state 0

    (0) S' -> . program
    (1) program -> . decl_list
    (2) decl_list -> . decl
    (3) decl_list -> . decl_list decl
<<<<<<< HEAD
    (4) decl -> . class_decl
    (5) decl -> . func_decl
    (6) decl -> . var_decl
    (7) class_decl -> . CLASS IDENT { compound_stmt }
    (8) func_decl -> . type_spec IDENT ( param_list ) compound_stmt
    (49) var_decl -> . type_spec IDENT [ INTLIT ] ;
    (50) var_decl -> . type_spec IDENT = expr ;
    (51) var_decl -> . type_spec IDENT ;
    (52) type_spec -> . STRING
    (53) type_spec -> . BOOL
    (54) type_spec -> . FLOAT
    (55) type_spec -> . INT
    (56) type_spec -> . VOID
    CLASS           shift and go to state 7
    STRING          shift and go to state 9
    BOOL            shift and go to state 10
    FLOAT           shift and go to state 11
    INT             shift and go to state 12
    VOID            shift and go to state 13
=======
    (4) decl -> . var_decl_instance
    (5) decl -> . class_decl
    (6) decl -> . func_decl
    (7) decl -> . var_decl
    (64) var_decl_instance -> . IDENT IDENT ;
    (8) class_decl -> . CLASS IDENT { class_body } ;
    (19) func_decl -> . type_spec IDENT ( param_list ) compound_stmt
    (61) var_decl -> . type_spec IDENT [ INTLIT ] ;
    (62) var_decl -> . type_spec IDENT = expr ;
    (63) var_decl -> . type_spec IDENT ;
    (65) type_spec -> . STRING
    (66) type_spec -> . BOOL
    (67) type_spec -> . FLOAT
    (68) type_spec -> . INT
    (69) type_spec -> . VOID
    IDENT           shift and go to state 8
    CLASS           shift and go to state 9
    STRING          shift and go to state 11
    BOOL            shift and go to state 12
    FLOAT           shift and go to state 13
    INT             shift and go to state 14
    VOID            shift and go to state 15
>>>>>>> 0b004bccc6761290b3abd9ec21452a14d52de767

    program                        shift and go to state 1
    decl_list                      shift and go to state 2
    decl                           shift and go to state 3
    var_decl_instance              shift and go to state 4
    class_decl                     shift and go to state 5
    func_decl                      shift and go to state 6
    var_decl                       shift and go to state 7
    type_spec                      shift and go to state 10

state 1

    (0) S' -> program .


state 2

    (1) program -> decl_list .
    (3) decl_list -> decl_list . decl
<<<<<<< HEAD
    (4) decl -> . class_decl
    (5) decl -> . func_decl
    (6) decl -> . var_decl
    (7) class_decl -> . CLASS IDENT { compound_stmt }
    (8) func_decl -> . type_spec IDENT ( param_list ) compound_stmt
    (49) var_decl -> . type_spec IDENT [ INTLIT ] ;
    (50) var_decl -> . type_spec IDENT = expr ;
    (51) var_decl -> . type_spec IDENT ;
    (52) type_spec -> . STRING
    (53) type_spec -> . BOOL
    (54) type_spec -> . FLOAT
    (55) type_spec -> . INT
    (56) type_spec -> . VOID
=======
    (4) decl -> . var_decl_instance
    (5) decl -> . class_decl
    (6) decl -> . func_decl
    (7) decl -> . var_decl
    (64) var_decl_instance -> . IDENT IDENT ;
    (8) class_decl -> . CLASS IDENT { class_body } ;
    (19) func_decl -> . type_spec IDENT ( param_list ) compound_stmt
    (61) var_decl -> . type_spec IDENT [ INTLIT ] ;
    (62) var_decl -> . type_spec IDENT = expr ;
    (63) var_decl -> . type_spec IDENT ;
    (65) type_spec -> . STRING
    (66) type_spec -> . BOOL
    (67) type_spec -> . FLOAT
    (68) type_spec -> . INT
    (69) type_spec -> . VOID
>>>>>>> 0b004bccc6761290b3abd9ec21452a14d52de767
    $end            reduce using rule 1 (program -> decl_list .)
    IDENT           shift and go to state 8
    CLASS           shift and go to state 9
    STRING          shift and go to state 11
    BOOL            shift and go to state 12
    FLOAT           shift and go to state 13
    INT             shift and go to state 14
    VOID            shift and go to state 15

    decl                           shift and go to state 16
    var_decl_instance              shift and go to state 4
    class_decl                     shift and go to state 5
    func_decl                      shift and go to state 6
    var_decl                       shift and go to state 7
    type_spec                      shift and go to state 10

state 3

    (2) decl_list -> decl .
    IDENT           reduce using rule 2 (decl_list -> decl .)
    CLASS           reduce using rule 2 (decl_list -> decl .)
    STRING          reduce using rule 2 (decl_list -> decl .)
    BOOL            reduce using rule 2 (decl_list -> decl .)
    FLOAT           reduce using rule 2 (decl_list -> decl .)
    INT             reduce using rule 2 (decl_list -> decl .)
    VOID            reduce using rule 2 (decl_list -> decl .)
    $end            reduce using rule 2 (decl_list -> decl .)


state 4

    (4) decl -> var_decl_instance .
    IDENT           reduce using rule 4 (decl -> var_decl_instance .)
    CLASS           reduce using rule 4 (decl -> var_decl_instance .)
    STRING          reduce using rule 4 (decl -> var_decl_instance .)
    BOOL            reduce using rule 4 (decl -> var_decl_instance .)
    FLOAT           reduce using rule 4 (decl -> var_decl_instance .)
    INT             reduce using rule 4 (decl -> var_decl_instance .)
    VOID            reduce using rule 4 (decl -> var_decl_instance .)
    $end            reduce using rule 4 (decl -> var_decl_instance .)


state 5

    (5) decl -> class_decl .
    IDENT           reduce using rule 5 (decl -> class_decl .)
    CLASS           reduce using rule 5 (decl -> class_decl .)
    STRING          reduce using rule 5 (decl -> class_decl .)
    BOOL            reduce using rule 5 (decl -> class_decl .)
    FLOAT           reduce using rule 5 (decl -> class_decl .)
    INT             reduce using rule 5 (decl -> class_decl .)
    VOID            reduce using rule 5 (decl -> class_decl .)
    $end            reduce using rule 5 (decl -> class_decl .)


state 6

    (6) decl -> func_decl .
    IDENT           reduce using rule 6 (decl -> func_decl .)
    CLASS           reduce using rule 6 (decl -> func_decl .)
    STRING          reduce using rule 6 (decl -> func_decl .)
    BOOL            reduce using rule 6 (decl -> func_decl .)
    FLOAT           reduce using rule 6 (decl -> func_decl .)
    INT             reduce using rule 6 (decl -> func_decl .)
    VOID            reduce using rule 6 (decl -> func_decl .)
    $end            reduce using rule 6 (decl -> func_decl .)


state 7

    (7) decl -> var_decl .
    IDENT           reduce using rule 7 (decl -> var_decl .)
    CLASS           reduce using rule 7 (decl -> var_decl .)
    STRING          reduce using rule 7 (decl -> var_decl .)
    BOOL            reduce using rule 7 (decl -> var_decl .)
    FLOAT           reduce using rule 7 (decl -> var_decl .)
    INT             reduce using rule 7 (decl -> var_decl .)
    VOID            reduce using rule 7 (decl -> var_decl .)
    $end            reduce using rule 7 (decl -> var_decl .)


state 8

<<<<<<< HEAD
    (8) func_decl -> type_spec . IDENT ( param_list ) compound_stmt
    (49) var_decl -> type_spec . IDENT [ INTLIT ] ;
    (50) var_decl -> type_spec . IDENT = expr ;
    (51) var_decl -> type_spec . IDENT ;
    IDENT           shift and go to state 16
=======
    (64) var_decl_instance -> IDENT . IDENT ;
    IDENT           shift and go to state 17
>>>>>>> 0b004bccc6761290b3abd9ec21452a14d52de767


state 9

<<<<<<< HEAD
    (52) type_spec -> STRING .
    IDENT           reduce using rule 52 (type_spec -> STRING .)
=======
    (8) class_decl -> CLASS . IDENT { class_body } ;
    IDENT           shift and go to state 18
>>>>>>> 0b004bccc6761290b3abd9ec21452a14d52de767


state 10

<<<<<<< HEAD
    (53) type_spec -> BOOL .
    IDENT           reduce using rule 53 (type_spec -> BOOL .)
=======
    (19) func_decl -> type_spec . IDENT ( param_list ) compound_stmt
    (61) var_decl -> type_spec . IDENT [ INTLIT ] ;
    (62) var_decl -> type_spec . IDENT = expr ;
    (63) var_decl -> type_spec . IDENT ;
    IDENT           shift and go to state 19
>>>>>>> 0b004bccc6761290b3abd9ec21452a14d52de767


state 11

<<<<<<< HEAD
    (54) type_spec -> FLOAT .
    IDENT           reduce using rule 54 (type_spec -> FLOAT .)
=======
    (65) type_spec -> STRING .
    IDENT           reduce using rule 65 (type_spec -> STRING .)
>>>>>>> 0b004bccc6761290b3abd9ec21452a14d52de767


state 12

<<<<<<< HEAD
    (55) type_spec -> INT .
    IDENT           reduce using rule 55 (type_spec -> INT .)
=======
    (66) type_spec -> BOOL .
    IDENT           reduce using rule 66 (type_spec -> BOOL .)
>>>>>>> 0b004bccc6761290b3abd9ec21452a14d52de767


state 13

<<<<<<< HEAD
    (56) type_spec -> VOID .
    IDENT           reduce using rule 56 (type_spec -> VOID .)
=======
    (67) type_spec -> FLOAT .
    IDENT           reduce using rule 67 (type_spec -> FLOAT .)
>>>>>>> 0b004bccc6761290b3abd9ec21452a14d52de767


state 14

    (68) type_spec -> INT .
    IDENT           reduce using rule 68 (type_spec -> INT .)


state 15

    (69) type_spec -> VOID .
    IDENT           reduce using rule 69 (type_spec -> VOID .)


state 16

    (3) decl_list -> decl_list decl .
    IDENT           reduce using rule 3 (decl_list -> decl_list decl .)
    CLASS           reduce using rule 3 (decl_list -> decl_list decl .)
    STRING          reduce using rule 3 (decl_list -> decl_list decl .)
    BOOL            reduce using rule 3 (decl_list -> decl_list decl .)
    FLOAT           reduce using rule 3 (decl_list -> decl_list decl .)
    INT             reduce using rule 3 (decl_list -> decl_list decl .)
    VOID            reduce using rule 3 (decl_list -> decl_list decl .)
    $end            reduce using rule 3 (decl_list -> decl_list decl .)


state 17

<<<<<<< HEAD
    (7) class_decl -> CLASS IDENT . { compound_stmt }
    {               shift and go to state 17


state 16

    (8) func_decl -> type_spec IDENT . ( param_list ) compound_stmt
    (49) var_decl -> type_spec IDENT . [ INTLIT ] ;
    (50) var_decl -> type_spec IDENT . = expr ;
    (51) var_decl -> type_spec IDENT . ;
    (               shift and go to state 18
    [               shift and go to state 19
    =               shift and go to state 21
=======
    (64) var_decl_instance -> IDENT IDENT . ;
>>>>>>> 0b004bccc6761290b3abd9ec21452a14d52de767
    ;               shift and go to state 20


state 18

<<<<<<< HEAD
    (8) func_decl -> type_spec IDENT ( . param_list ) compound_stmt
    (9) param_list -> . param_list , param
    (10) param_list -> . empty
    (89) empty -> .
    )               reduce using rule 89 (empty -> .)
    ,               reduce using rule 89 (empty -> .)
=======
    (8) class_decl -> CLASS IDENT . { class_body } ;
    {               shift and go to state 21
>>>>>>> 0b004bccc6761290b3abd9ec21452a14d52de767


state 19

<<<<<<< HEAD
    (49) var_decl -> type_spec IDENT [ . INTLIT ] ;
    INTLIT          shift and go to state 26
=======
    (19) func_decl -> type_spec IDENT . ( param_list ) compound_stmt
    (61) var_decl -> type_spec IDENT . [ INTLIT ] ;
    (62) var_decl -> type_spec IDENT . = expr ;
    (63) var_decl -> type_spec IDENT . ;
    (               shift and go to state 22
    [               shift and go to state 23
    =               shift and go to state 25
    ;               shift and go to state 24
>>>>>>> 0b004bccc6761290b3abd9ec21452a14d52de767


state 20

<<<<<<< HEAD
    (51) var_decl -> type_spec IDENT ; .
    CLASS           reduce using rule 51 (var_decl -> type_spec IDENT ; .)
    STRING          reduce using rule 51 (var_decl -> type_spec IDENT ; .)
    BOOL            reduce using rule 51 (var_decl -> type_spec IDENT ; .)
    FLOAT           reduce using rule 51 (var_decl -> type_spec IDENT ; .)
    INT             reduce using rule 51 (var_decl -> type_spec IDENT ; .)
    VOID            reduce using rule 51 (var_decl -> type_spec IDENT ; .)
    $end            reduce using rule 51 (var_decl -> type_spec IDENT ; .)
    FOR             reduce using rule 51 (var_decl -> type_spec IDENT ; .)
    SUPER           reduce using rule 51 (var_decl -> type_spec IDENT ; .)
    PUBLIC          reduce using rule 51 (var_decl -> type_spec IDENT ; .)
    PRIVATE         reduce using rule 51 (var_decl -> type_spec IDENT ; .)
    THIS            reduce using rule 51 (var_decl -> type_spec IDENT ; .)
    IDENT           reduce using rule 51 (var_decl -> type_spec IDENT ; .)
    PRINTF          reduce using rule 51 (var_decl -> type_spec IDENT ; .)
    CONTINUE        reduce using rule 51 (var_decl -> type_spec IDENT ; .)
    BREAK           reduce using rule 51 (var_decl -> type_spec IDENT ; .)
    WHILE           reduce using rule 51 (var_decl -> type_spec IDENT ; .)
    RETURN          reduce using rule 51 (var_decl -> type_spec IDENT ; .)
    IF              reduce using rule 51 (var_decl -> type_spec IDENT ; .)
    {               reduce using rule 51 (var_decl -> type_spec IDENT ; .)
    (               reduce using rule 51 (var_decl -> type_spec IDENT ; .)
    NOT             reduce using rule 51 (var_decl -> type_spec IDENT ; .)
    DECREMENT       reduce using rule 51 (var_decl -> type_spec IDENT ; .)
    INCREMENT       reduce using rule 51 (var_decl -> type_spec IDENT ; .)
    +               reduce using rule 51 (var_decl -> type_spec IDENT ; .)
    !               reduce using rule 51 (var_decl -> type_spec IDENT ; .)
    -               reduce using rule 51 (var_decl -> type_spec IDENT ; .)
    FALSE           reduce using rule 51 (var_decl -> type_spec IDENT ; .)
    TRUE            reduce using rule 51 (var_decl -> type_spec IDENT ; .)
    STRINGLIT       reduce using rule 51 (var_decl -> type_spec IDENT ; .)
    BOOLIT          reduce using rule 51 (var_decl -> type_spec IDENT ; .)
    FLOATLIT        reduce using rule 51 (var_decl -> type_spec IDENT ; .)
    INTLIT          reduce using rule 51 (var_decl -> type_spec IDENT ; .)
    }               reduce using rule 51 (var_decl -> type_spec IDENT ; .)
=======
    (64) var_decl_instance -> IDENT IDENT ; .
    IDENT           reduce using rule 64 (var_decl_instance -> IDENT IDENT ; .)
    CLASS           reduce using rule 64 (var_decl_instance -> IDENT IDENT ; .)
    STRING          reduce using rule 64 (var_decl_instance -> IDENT IDENT ; .)
    BOOL            reduce using rule 64 (var_decl_instance -> IDENT IDENT ; .)
    FLOAT           reduce using rule 64 (var_decl_instance -> IDENT IDENT ; .)
    INT             reduce using rule 64 (var_decl_instance -> IDENT IDENT ; .)
    VOID            reduce using rule 64 (var_decl_instance -> IDENT IDENT ; .)
    $end            reduce using rule 64 (var_decl_instance -> IDENT IDENT ; .)
    SUPER           reduce using rule 64 (var_decl_instance -> IDENT IDENT ; .)
    PUBLIC          reduce using rule 64 (var_decl_instance -> IDENT IDENT ; .)
    PRIVATE         reduce using rule 64 (var_decl_instance -> IDENT IDENT ; .)
    THIS            reduce using rule 64 (var_decl_instance -> IDENT IDENT ; .)
    PRINTF          reduce using rule 64 (var_decl_instance -> IDENT IDENT ; .)
    CONTINUE        reduce using rule 64 (var_decl_instance -> IDENT IDENT ; .)
    BREAK           reduce using rule 64 (var_decl_instance -> IDENT IDENT ; .)
    WHILE           reduce using rule 64 (var_decl_instance -> IDENT IDENT ; .)
    RETURN          reduce using rule 64 (var_decl_instance -> IDENT IDENT ; .)
    IF              reduce using rule 64 (var_decl_instance -> IDENT IDENT ; .)
    {               reduce using rule 64 (var_decl_instance -> IDENT IDENT ; .)
    (               reduce using rule 64 (var_decl_instance -> IDENT IDENT ; .)
    NOT             reduce using rule 64 (var_decl_instance -> IDENT IDENT ; .)
    DECREMENT       reduce using rule 64 (var_decl_instance -> IDENT IDENT ; .)
    INCREMENT       reduce using rule 64 (var_decl_instance -> IDENT IDENT ; .)
    +               reduce using rule 64 (var_decl_instance -> IDENT IDENT ; .)
    !               reduce using rule 64 (var_decl_instance -> IDENT IDENT ; .)
    -               reduce using rule 64 (var_decl_instance -> IDENT IDENT ; .)
    FALSE           reduce using rule 64 (var_decl_instance -> IDENT IDENT ; .)
    TRUE            reduce using rule 64 (var_decl_instance -> IDENT IDENT ; .)
    STRINGLIT       reduce using rule 64 (var_decl_instance -> IDENT IDENT ; .)
    BOOLIT          reduce using rule 64 (var_decl_instance -> IDENT IDENT ; .)
    FLOATLIT        reduce using rule 64 (var_decl_instance -> IDENT IDENT ; .)
    INTLIT          reduce using rule 64 (var_decl_instance -> IDENT IDENT ; .)
    }               reduce using rule 64 (var_decl_instance -> IDENT IDENT ; .)
    ELSE            reduce using rule 64 (var_decl_instance -> IDENT IDENT ; .)
>>>>>>> 0b004bccc6761290b3abd9ec21452a14d52de767


state 21
